# uvicorn-gunicorn-fastapi-docker

./: .gitignore  LICENSE  README.md  backup.travis.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docker-images/: python3.10-alpine3.16.dockerfile  python3.10-slim.dockerfile  python3.10.dockerfile  python3.8-slim.dockerfile  python3.8.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  requirements.txt
scripts/: build-push.sh  build.sh  process_all.py
tests/test_01_main/: test_defaults.py
